# DAP391m

./: main.ipynb  main.py  pyproject.toml
Summit/: 01 - Data preparation.ipynb  02 -Cross validation.ipynb
Summit/RAG/: chunks.pkl  vector.index
Summit/RAG/src/: build_index.py  chunker.py  embedder.py  query_rag.py  rag_chatbot.py  retriever.py
Summit/lab1/: Chefboost.py  decision_tree.ipynb  lab1.ipynb
Summit/lab1/.ipynb_checkpoints/: lab1-checkpoint.ipynb
Summit/lab1/commons/: functions.py
Summit/lab1/training/: Preprocess.py  Training.py
Summit/lab1/tuning/: adaboost.py  gbm.py  randomforest.py
Summit/lab2/: RandomForests.ipynb  fine_tree.dot  fix_notebook.py  tree.dot
Summit/lab3/: boosting.ipynb  fix_kfold.py
Summit/lab4/: Lab4.ipynb
Summit/lab5/: lab5.ipynb
Summit/lab6/: christmasStories.txt  lab6.ipynb
Summit/lab7/: lab7.ipynb
lab_part_2/01 - Linear and logistic regression/: 01 - Data preparation.ipynb  01 - Data preparation.ipynb.html  02 - Linear and logistic regression.ipynb  02 - Linear and logistic regression.ipynb.txt
lab_part_2/01 - Linear and logistic regression/.ipynb_checkpoints/: 01 - Data preparation-checkpoint.ipynb
lab_part_2/02 - Cross validation/: 05 -Cross validation.ipynb
lab_part_2/02 - Cross validation/.ipynb_checkpoints/: 05 -Cross validation-checkpoint.ipynb
lab_part_3/lab2/lab2/: randomForests.ipynb  small_tree.dot
lab_part_3/lab3/: grb.ipynb  grbDiagram1.drawio  grbDiagram2.drawio  rgb1.drawio
lab_part_3/lab3/.ipynb_checkpoints/: grb-checkpoint.ipynb
(+1 files in other folders)
