[project]
name = "dap391m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chefboost>=0.0.19",
    "graphviz>=0.21",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
