[project]
name = "dap391m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chefboost>=0.0.19",
    "faiss-cpu>=1.13.2",
    "google-genai>=1.67.0",
    "graphviz>=0.21",
    "ipython>=9.10.0",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "pandas>=2.3.3",
    "pexpect>=4.9.0",
    "pydot>=4.0.1",
    "pymilvus>=2.6.10",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "theano>=1.0.5",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]
